Data types completed